fixed page parts overlapping

--- a/style.css
+++ b/style.css
@@ -48,8 +48,9 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex: 1 1 auto;
     background-color: #1F2937;
-    height: 500px;
+    min-height: 500px;
 }
 
 .first img {
@@ -58,8 +59,8 @@ a {
 }
 
 .firsttext {
-    height: 300px;
-    width: 500px;
+    min-height: 300px;
+    min-width: 500px;
     margin: 20px;
     display: flex;
     justify-content: flex-start;
@@ -92,8 +93,9 @@ a {
 }
 
 .second {
-    height: 500px;
+    min-height: 500px;
     text-align: center; 
+                            
 }
 
 .second-title, .second-text {
@@ -113,7 +115,8 @@ a {
 
 .boxes-container {
     display: flex;
-    height: 300px;
+    flex: 1;
+    min-height: 300px;
     gap: 70px;
     justify-content: center;
     align-items: center;
@@ -130,20 +133,30 @@ a {
 
 .third  {
     display: flex;
+    flex: auto;
     background-color: #e5e7eb;
-    height: 400px;
+    min-height: 400px;
+    justify-content: center;
+    align-content: center;
+  
+}
+
+.third-box  {
+    min-height: 350px;
+    margin: 50px;
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
     font-size: 36px;
     font-style: italic;
     color: #1F2937;
-
+    text-align: center;
 }
 
 .fourth {
     display: flex;  
-    height: 400px;
+    flex: 1 1 auto;     
+    min-height: 400px;
     justify-content: center;
     align-items: center;
 }
@@ -152,8 +165,9 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
-    width: 800px;
+    
+    min-height: 200px;
+    min-width: 1100px;
     background-color: #3882f6;
     border-radius: 25px;
     flex-wrap: wrap;
@@ -168,6 +182,11 @@ a {
 .fourth-text    {
     font-size: 17px;
     color: #f9faf8;
+    
+}
+
+.fourthtext {
+    margin-right: 150px;
 }
 
 .fourth button {
